--- a/css/style.css
+++ b/css/style.css
@@ -78,89 +78,7 @@ header {
 
 
 
-/*MEDIA QUERY MOBILE */
 
-@media all and (max-width: 599px) {
-
-    /*HEADER NAV*/
-    header {
-        display: block;
-    }
-
-    #logo-burger {
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    #logo-burger label {
-        display: block;
-        font-size: 2em;
-        cursor: pointer;
-    }
-
-    #toggle:checked + #main-nav {
-        display: block;
-    }
-
-    #main-nav {
-        display: none;
-    }
-
-    #main-nav li {
-        text-align: center;
-        border-top: 1px solid rgba(255, 255, 255, 0.3);
-        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    }
-
-    #main-nav a {
-        margin: 0;
-    }
-
-    #main-nav li:last-of-type {
-        border-bottom: none;
-    }
-}
-
-/*MEDIA QUERY TABLET AND ABOVE*/
-
-@media all and (min-width: 600px) {
-
-    /*HEADER NAV*/
-    header {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        /*remove this if you do not want the column layout whit logo above menu for medium size screens*/
-    }
-
-    #logo-burger {
-        margin: 0;
-
-    }
-
-    #logo {
-        margin-top: .3em;
-    }
-
-    #main-nav {
-        justify-content: space-between;
-        width: 100%;
-        margin: 0;
-    }
-
-    #main-nav a {
-        margin: 0 .5em;
-    }
-
-    .hidden {
-        display: none;
-    }
-
-    label {
-        display: none;
-    }
-
-}
 
 /*MEDIA QUERY LAPTOP AND ABOVE*/
 
@@ -172,269 +90,6 @@ header {
         align-items: center;
     }
 
-}
-
-
-
-/*Guide html*/
-/*Guide html*/
-/*Guide html*/
-/*Guide html*/
-/*Guide html*/
-@import url(https: //fonts.googleapis.com/css?family=Open+Sans:600;);
-
-.map-container {
-    background-color: #000;
-    display: inline-block;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    margin: 20px 40px;
-    max-width: 315px;
-    min-width: 230px;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-    width: 100%;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.map-container * {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: all 0.35s ease;
-    transition: all 0.35s ease;
-
-}
-
-.map-container:before,
-.map-container:after {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    -webkit-transition: all 0.35s ease;
-    transition: all 0.35s ease;
-    background-color: #000000;
-    border-left: 3px solid #fff;
-    border-right: 3px solid #fff;
-    content: '';
-    opacity: 0.9;
-    z-index: 1;
-}
-
-.map-container:before {
-    -webkit-transform: skew(45deg) translateX(-155%);
-    transform: skew(45deg) translateX(-155%);
-}
-
-.map-container:after {
-    -webkit-transform: skew(45deg) translateX(155%);
-    transform: skew(45deg) translateX(155%);
-}
-
-.map-container img {
-    backface-visibility: hidden;
-    max-width: 100%;
-    vertical-align: top;
-}
-
-.map-container figcaption {
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    z-index: 2;
-    -webkit-transform: translate(-50%, -50%) scale(0.5);
-    transform: translate(-50%, -50%) scale(0.5);
-    opacity: 0;
-    -webkit-box-shadow: 0 0 10px #000000;
-    box-shadow: 0 0 10px #000000;
-}
-
-.map-container h3 {
-    background-color: #000000;
-    border: 2px solid #fff;
-    color: #fff;
-    font-size: 1em;
-    font-weight: 600;
-    letter-spacing: 1px;
-    margin: 0;
-    padding: 5px 10px;
-    text-transform: uppercase;
-}
-
-.map-container a {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 3;
-}
-
-.map-container:hover > img,
-.map-container.hover > img {
-    opacity: 0.5;
-}
-
-.map-container:hover:before,
-.map-container.hover:before {
-    -webkit-transform: skew(45deg) translateX(-55%);
-    transform: skew(45deg) translateX(-55%);
-}
-
-.map-container:hover:after,
-.map-container.hover:after {
-    -webkit-transform: skew(45deg) translateX(55%);
-    transform: skew(45deg) translateX(55%);
-}
-
-.map-container:hover figcaption,
-.map-container.hover figcaption {
-    -webkit-transform: translate(-50%, -50%) scale(1);
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-}
-
-.top-sidebar-guide {
-    width: 21%;
-    float: left;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    padding: 2% 3%;
-    margin: 2% 0 2% 3%;
-    background-image: url(../images/csgo-sidebar.jpg);
-    background-size: cover;
-    color: white;
-    font-size: 15px;
-    font-family: "arial", sans-serif;
-    text-shadow: -0.5px 0 black, 0 0.5px 0 black, 0.5px 0 black, 0 -0.5px black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.middle-sidebar-guide {
-    width: 21%;
-    float: left;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    padding: 8% 3%;
-    margin: 0 0 2% 3%;
-    background-image: url(../images/csgo-sidebar2.jpg);
-    background-size: cover;
-    color: white;
-    font-size: 15px;
-    font-family: "arial", sans-serif;
-    text-shadow: -0.5px 0 black, 0 0.5px 0 black, 0.5px 0 black, 0 -0.5px black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.middle-sidebar-guide p {
-    padding-bottom: 10%;
-
-}
-
-.middle-sidebar-guide img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-
-
-/*Games html*/
-/*Games html*/
-/*Games html*/
-/*Games html*/
-/*Games html*/
-#box-container {
-    width: 100%:;
-    display: flex;
-    justify-content: space-around;
-    padding-top: 25px;
-}
-
-.snip1581 {
-    font-family: 'Poppins:400,700', Arial, sans-serif;
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    margin: 8px;
-    min-width: 250px;
-    max-width: 310px;
-    width: 17%;
-    background-color: #000000;
-    color: #ffffff;
-    text-align: left;
-    font-size: 16px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-}
-
-.snip1581 * {
-    -webkit-transition: all 0.35s;
-    transition: all 0.35s;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.snip1581 img {
-    max-width: 100%;
-    vertical-align: top;
-}
-
-.snip1581 figcaption {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 20px;
-    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.8) 0%, transparent 100%);
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, transparent 100%);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-.snip1581 h3 {
-    font-size: 44px;
-    font-weight: 400;
-    line-height: 1;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    margin: 3px 0;
-}
-
-.snip1581 .title1 {
-    font-weight: 700;
-}
-
-.snip1581 .title2 {
-    color: #a58e7c;
-    font-weight: 300;
-}
-
-.snip1581 .title3 {
-    font-weight: 700;
-    font-size: 25px;
-}
-
-.snip1581 a {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-.snip1581:hover img,
-.snip1581.hover img {
-    -webkit-transform: scale(1.3) rotate(5deg);
-    transform: scale(1.3) rotate(5deg);
 }
 
 /*Main content*/
@@ -488,32 +143,6 @@ header {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-/*inferno html*/
-/*inferno html*/
-/*inferno html*/
-/*inferno html*/
-/*inferno html*/
-
-.content5 {
-    width: 70%;
-    float: left;
-    display: flex;
-}
-
-#inferno {
-    float: left;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 10px;
-}
-
-#cache {
-    width: 22%;
-    float: right;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-top: 60px;
-    border-radius: 10px;
-    margin-bottom: 60px;
-}
 
 /*Sidebar*/
 /*Sidebar*/
@@ -524,13 +153,12 @@ header {
 .top-sidebar {
     width: 21%;
     float: left;
+    background-color: #7e7e36;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     padding: 2% 3%;
-    margin: 2% 0 2% 3%;
-    background-image: url(../images/astralis.png);
-    background-size: cover;
+    margin: 0 0 2% 3%;
 }
 
 .top-sidebar1 {
@@ -541,9 +169,9 @@ header {
     -webkit-border-radius: 5px;
     padding: 2% 3%;
     margin: 2% 0 2% 3%;
-    background-image: url(../images/vinder.png);
+    background: #2d2d2d;
     background-size: cover;
-    height: 400px
+    height: 400px;
 }
 
 .top-sidebar > article {
@@ -551,7 +179,7 @@ header {
 }
 
 .middle-sidebar {
-    background-image: url(../images/method.png);
+    background: #2d2d2d;
     background-size: cover;
 }
 
@@ -563,7 +191,7 @@ header {
 .bottom-sidebar {
     width: 21%;
     float: left;
-    background-color: lightgray;
+    background-color: #7e7e36;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -578,7 +206,7 @@ header {
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    background-color: #666;
+    background-color: #2d2d2d;
     margin: 2% 0;
 }
 
@@ -638,7 +266,7 @@ header {
     .top-sidebar,
     .middle-sidebar,
     .bottom-sidebar {
-        width: 94%;
+        width: 100%;
         padding: 2% 3%;
         margin: 2% 0 2% 0%;
     }
@@ -675,29 +303,100 @@ header {
     .content5 {
         width: 100%;
     }
+    
+    .desc{
+        text-align: center;
+        font-style:italic;
+        font-size: 110%;
+        color: #2d2d2d;
+    }
+    
+    .forside-article{
+        text-align: center;
+    }
+    
+     /*HEADER NAV*/
+    header {
+        display: block;
+    }
 
+    #logo-burger {
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #logo-burger label {
+        display: block;
+        font-size: 2em;
+        cursor: pointer;
+    }
+
+    #toggle:checked + #main-nav {
+        display: block;
+    }
+
+    #main-nav {
+        display: none;
+    }
+
+    #main-nav li {
+        text-align: center;
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+    #main-nav a {
+        margin: 0;
+    }
+
+    #main-nav li:last-of-type {
+        border-bottom: none;
+    }
+    
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media all and (min-width: 600px) {
 
-    .body {
-        width: 90%;
+    /*HEADER NAV*/
+    header {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        /*remove this if you do not want the column layout whit logo above menu for medium size screens*/
+    }
+
+    #logo-burger {
+        margin: 0;
+
+    }
+
+    #logo {
+        margin-top: .3em;
+    }
+
+    #main-nav {
+        justify-content: space-between;
+        width: 100%;
+        margin: 0;
+    }
+
+    #main-nav a {
+        margin: 0 .5em;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    label {
+        display: none;
+    }
+    
+     .body {
+        width: 100%;
         font-size: 95%;
     }
 
-    #box-container {
-        width: 100%;
-        display: inline-block
-    }
 
-    #inferno {
-        width: 100%;
-        height: auto;
-    }
-
-    #cache {
-        width: 33%;
-        height: auto;
-    }
 
 }
